# mca-solution-fku9fu

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.test.yml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: api-gateway.yml  core-service.yml  document-service.yml  email-service.yml  notification-service.yml  web.yml
documentation/: Project Guide.md  Software Requirements Specifications (SRS).json  Software Requirements Specifications (SRS).md  Technical Specifications.md
infrastructure/helm/api-gateway/: Chart.yaml  values.yaml
infrastructure/helm/core-service/: Chart.yaml  values.yaml
infrastructure/helm/document-service/: Chart.yaml  values.yaml
src/backend/: .dockerignore  .env.example  docker-compose.yml
src/backend/document-service/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
src/backend/document-service/src/: __init__.py
src/backend/document-service/src/config/: __init__.py  settings.py
src/backend/document-service/src/controllers/: __init__.py  document_controller.py
src/backend/document-service/src/models/: __init__.py  document.py
src/backend/document-service/src/services/: __init__.py  classification_service.py  ocr_service.py
src/backend/document-service/src/utils/: __init__.py  logger.py
src/backend/document-service/tests/: __init__.py  test_classification.py  test_ocr.py
src/web/: .dockerignore  .env.example  .eslintrc.js  Dockerfile  README.md  index.html  jest.config.js  package.json  tsconfig.json  vite.config.ts
(+235 files in other folders)
