[tool.poetry]
name = "document-service"
version = "1.0.0"
description = "Document processing service for MCA application handling with OCR and classification capabilities"
authors = ["Dollar Funding <tech@dollarfunding.com>"]

[tool.poetry.dependencies]
python = "^3.11"
# Core ML/AI libraries for OCR and classification - REQ: Document Processing Technology
tensorflow = "2.13.0"
scikit-learn = "1.3.0"
numpy = "1.24.0"

# Image and document processing - REQ: OCR Processing
Pillow = "9.5.0"
pytesseract = "0.3.10"
PyPDF2 = "3.0.0"

# API framework and server - REQ: Document Service Framework
fastapi = "0.100.0"
uvicorn = "0.22.0"
python-multipart = "0.0.6"

# AWS integration for document storage
boto3 = "1.28.0"

# Data validation and API models
pydantic = "2.0.0"

# Security and authentication
python-jose = "3.3.0"

# Monitoring and metrics
prometheus-client = "0.17.0"

[tool.poetry.group.dev.dependencies]
# Development tools for code quality and testing
black = "23.3.0"
pylint = "2.17.4"
pytest = "7.4.0"
pytest-cov = "4.1.0"

[build-system]
requires = ["poetry-core>=1.5.1"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]
include = "\.pyi?$"

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "C0330",  # wrong-hanging-indentation
    "C0326"   # bad-whitespace
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=xml --cov-report=term-missing"